implemented astrolog service

--- a/.env.docker.dist
+++ b/.env.docker.dist
@@ -1,13 +1,13 @@
 SERVER_PORT=5632
-SERVER_IP=127.0.0.1
+SERVER_IP=0.0.0.0
 
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=core_api
 
-MIGRATION_DIR=file://./migrations
+MIGRATION_DIR = file://./migrations
 
 APOD_URL=https://api.nasa.gov/planetary/apod
 APOD_API_KEY=
